# Finance-Tracker

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  PORTS.md  PRD.md  README.md  USER-STORY-MAP.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  playwright.config.ts
backend/: .env.example  Dockerfile  Dockerfile.telegram  alembic.ini  pyproject.toml  test 2.db  test 3.db
backend/alembic/: env.py
backend/alembic/versions/: 318e37987c75_add_pending_receipts_table.py  baeb5f1bd482_add_pending_receipts_table_fix.py  cf33df353ae9_initial_schema.py
backend/scripts/: seed_demo_data.py
backend/src/app/: config.py  database.py  main.py
backend/src/app/dependencies/: auth.py  feature_flags.py  rate_limit.py
backend/src/app/models/: __init__.py  auto_label.py  category.py  chat.py  credit_card.py  debt_payment.py  expense.py  feature_flag.py  friend_debt.py  import_history.py  loan.py  monthly_summary.py  receipt.py  recurring.py  telegram.py  user.py
backend/src/app/routers/: admin.py  analytics.py  auth.py  chat.py  (+11 more)
backend/telegram_bot/: main.py
backend/tests/: conftest.py  test_admin.py  test_analytics.py  test_auth.py  test_auto_label.py  test_categories.py  test_chat.py  test_credit_cards.py  test_csv_parser.py  test_data_isolation.py  test_debt_calculator.py  test_debt_strategies.py  test_expenses.py  test_feature_flags.py  test_friend_debt.py  test_imports_router.py  test_loans.py  test_ocr_ollama.py  test_pending_receipts.py  test_rate_limit.py  test_telegram.py
backend/tests/manual/: smoke_claude_chat.py  smoke_claude_ocr.py
(+139 files in other folders)
